<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="rboard_setup_title">RBoard Setup</string>
    <string name="rboard_setup_step1">Step 1: Telegram API configuration</string>
    <string name="rboard_setup_step2">Step 2: Switch to RBoard</string>
    <string name="rboard_switch_keyboard">Switch Keyboard</string>
    <string name="rboard_finish_setup">Finish Setup</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="language_selection_title">Languages</string>
    <string name="select_language">Languages</string>
    <string name="subtype_en_GB">English (UK)</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="subtype_es_US">Spanish (US)</string>
    <string name="subtype_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_generic_traditional"><xliff:g id="LANGUAGE_NAME" example="Nepali">%s</xliff:g> (Traditional)</string>
    <string name="subtype_generic_compact"><xliff:g id="LANGUAGE_NAME" example="Hindi">%s</xliff:g> (Compact)</string>
    <string name="subtype_no_language">No language (Alphabet)</string>
    <string name="subtype_no_language_qwerty">Alphabet (QWERTY)</string>
    <string name="keyboard_theme_dark_border" translatable="false">Material Dark Border</string>
    <string name="keyboard_theme_light_border" translatable="false">Material Light Border</string>
    <string name="keyboard_theme_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_light" translatable="false">Material Light</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="custom_input_style_note_message">"Your custom input style needs to be enabled before you start using it. Do you want to enable it now?"</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="custom_input_style_already_exists">"The same input style already exists: <xliff:g id="INPUT_STYLE_NAME" example="English (Dvorak)">%s</xliff:g>"</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="button_default">Default</string>
    <string translatable="false" name="abbreviation_unit_percent"><xliff:g id="PERCENTS">%s</xliff:g>%%</string>
    <string name="prefs_keyboard_height_settings">Keyboard height</string>
    <string name="keyboard_color">Set custom keyboard color</string>
    <string name="hide_special_chars">Hide special characters</string>
    <string name="hide_language_switch_key">Hide language switch key</string>
    <string name="show_number_row">Show separate number row</string>
    <string name="space_swipe">Space swipe cursor move</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="matching_navbar_color">Use matching navigation bar color</string>
    <string name="rboard_setup_message">RBoard Keyboard is not enabled. Click OK to open Languages &amp; Input settings. You will need to select RBoard Keyboard in your current keyboard to use it.</string>
    <string name="keyboard_theme_gboard_light">Gboard Light</string>
    <string name="keyboard_theme_gboard_dark">Gboard Dark</string>
</resources>